# Nanochannel-Builder

./: .gitignore  README.md  pyproject.toml
md_simulation/builder/: surface.py  unit_cell.py  unit_cells.py
md_simulation/io/: gro_file.py  gro_line.py  lmp_file.py  lmp_line.py
md_simulation/topology/: build_topology.py
scripts/: build_membrane.py
tests/: gro_to_lmp.py  test_lmp_to_gro.py  test_read_gro.py  test_read_lmp.py  test_write_lmp.py
